--- a/170919/0919.html
+++ b/170919/0919.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
   <link rel="stylesheet" href="0919.css">
   <title>20170919 FDS6 assignment</title>
 </head>
+
 <body>
   <h2>에버노트 로고 디자인 응모했다가 낙방한 실패작</h2>
   <button>이전</button>
-  <button>다음</button>
+  <button class="next">다음</button>
 </body>
+
 </html>
