--- a/170920/0920.html
+++ b/170920/0920.html
@@ -11,8 +11,8 @@
 
 <body>
   <h1>오늘의 과제 2017.09.20</h1>
-  <div class="wrap" tabindex="0">
-    <ul class="list-box">
+  <div class="wrap">
+    <ul class="list-box" tabindex="0">
       <li class="no1"><a href="http://www.naver.com" target="_blank">네이버</a></li>
       <li class="no2"><a href="http://www.nate.com" target="_blank">네이트</a></li>
       <li class="no3"><a href="http://daum.net" target="_blank">다음</a></li>
