--- a/170920/0920.html
+++ b/170920/0920.html
@@ -13,11 +13,11 @@
   <h1>오늘의 과제 2017.09.20</h1>
   <div class="wrap">
     <ul class="list-box" tabindex="0">
-      <li class="no1"><a href="http://www.naver.com" target="_blank">네이버</a></li>
-      <li class="no2"><a href="http://www.nate.com" target="_blank">네이트</a></li>
-      <li class="no3"><a href="http://daum.net" target="_blank">다음</a></li>
-      <li class="no4"><a href="http://google.com" target="_blank">구글</a></li>
-      <li class="no5"><a href="http://fastcampus.co.kr" target="_blank">패스트캠퍼스</a></li>
+      <li class="no" tabindex="0"><a href="http://www.naver.com" target="_blank">네이버</a></li>
+      <li class="no" tabindex="0"><a href="http://www.nate.com" target="_blank">네이트</a></li>
+      <li class="no" tabindex="0"><a href="http://daum.net" target="_blank">다음</a></li>
+      <li class="no" tabindex="0"><a href="http://google.com" target="_blank">구글</a></li>
+      <li class="no" tabindex="0"><a href="http://fastcampus.co.kr" target="_blank">패스트캠퍼스</a></li>
     </ul>
   </div>
 </body>
